docs/upbound-provider-aws/1.6/lambda/v1beta1/functionEventInvokeConfig.md
---
permalink: /upbound-provider-aws/1.6/lambda/v1beta1/functionEventInvokeConfig/
---

# lambda.v1beta1.functionEventInvokeConfig

"FunctionEventInvokeConfig is the Schema for the FunctionEventInvokeConfigs API. Manages an asynchronous invocation configuration for a Lambda Function or Alias."

## Index

* [`fn new(name)`](#fn-new)
* [`obj metadata`](#obj-metadata)
  * [`fn withAnnotations(annotations)`](#fn-metadatawithannotations)
  * [`fn withAnnotationsMixin(annotations)`](#fn-metadatawithannotationsmixin)
  * [`fn withClusterName(clusterName)`](#fn-metadatawithclustername)
  * [`fn withCreationTimestamp(creationTimestamp)`](#fn-metadatawithcreationtimestamp)
  * [`fn withDeletionGracePeriodSeconds(deletionGracePeriodSeconds)`](#fn-metadatawithdeletiongraceperiodseconds)
  * [`fn withDeletionTimestamp(deletionTimestamp)`](#fn-metadatawithdeletiontimestamp)
  * [`fn withFinalizers(finalizers)`](#fn-metadatawithfinalizers)
  * [`fn withFinalizersMixin(finalizers)`](#fn-metadatawithfinalizersmixin)
  * [`fn withGenerateName(generateName)`](#fn-metadatawithgeneratename)
  * [`fn withGeneration(generation)`](#fn-metadatawithgeneration)
  * [`fn withLabels(labels)`](#fn-metadatawithlabels)
  * [`fn withLabelsMixin(labels)`](#fn-metadatawithlabelsmixin)
  * [`fn withName(name)`](#fn-metadatawithname)
  * [`fn withNamespace(namespace)`](#fn-metadatawithnamespace)
  * [`fn withOwnerReferences(ownerReferences)`](#fn-metadatawithownerreferences)
  * [`fn withOwnerReferencesMixin(ownerReferences)`](#fn-metadatawithownerreferencesmixin)
  * [`fn withResourceVersion(resourceVersion)`](#fn-metadatawithresourceversion)
  * [`fn withSelfLink(selfLink)`](#fn-metadatawithselflink)
  * [`fn withUid(uid)`](#fn-metadatawithuid)
* [`obj spec`](#obj-spec)
  * [`fn withDeletionPolicy(deletionPolicy)`](#fn-specwithdeletionpolicy)
  * [`fn withManagementPolicies(managementPolicies)`](#fn-specwithmanagementpolicies)
  * [`fn withManagementPoliciesMixin(managementPolicies)`](#fn-specwithmanagementpoliciesmixin)
  * [`obj spec.forProvider`](#obj-specforprovider)
    * [`fn withDestinationConfig(destinationConfig)`](#fn-specforproviderwithdestinationconfig)
    * [`fn withDestinationConfigMixin(destinationConfig)`](#fn-specforproviderwithdestinationconfigmixin)
    * [`fn withFunctionName(functionName)`](#fn-specforproviderwithfunctionname)
    * [`fn withMaximumEventAgeInSeconds(maximumEventAgeInSeconds)`](#fn-specforproviderwithmaximumeventageinseconds)
    * [`fn withMaximumRetryAttempts(maximumRetryAttempts)`](#fn-specforproviderwithmaximumretryattempts)
    * [`fn withQualifier(qualifier)`](#fn-specforproviderwithqualifier)
    * [`fn withRegion(region)`](#fn-specforproviderwithregion)
    * [`obj spec.forProvider.destinationConfig`](#obj-specforproviderdestinationconfig)
      * [`fn withOnFailure(onFailure)`](#fn-specforproviderdestinationconfigwithonfailure)
      * [`fn withOnFailureMixin(onFailure)`](#fn-specforproviderdestinationconfigwithonfailuremixin)
      * [`fn withOnSuccess(onSuccess)`](#fn-specforproviderdestinationconfigwithonsuccess)
      * [`fn withOnSuccessMixin(onSuccess)`](#fn-specforproviderdestinationconfigwithonsuccessmixin)
      * [`obj spec.forProvider.destinationConfig.onFailure`](#obj-specforproviderdestinationconfigonfailure)
        * [`fn withDestination(destination)`](#fn-specforproviderdestinationconfigonfailurewithdestination)
        * [`obj spec.forProvider.destinationConfig.onFailure.destinationRef`](#obj-specforproviderdestinationconfigonfailuredestinationref)
          * [`fn withName(name)`](#fn-specforproviderdestinationconfigonfailuredestinationrefwithname)
          * [`obj spec.forProvider.destinationConfig.onFailure.destinationRef.policy`](#obj-specforproviderdestinationconfigonfailuredestinationrefpolicy)
            * [`fn withResolution(resolution)`](#fn-specforproviderdestinationconfigonfailuredestinationrefpolicywithresolution)
            * [`fn withResolve(resolve)`](#fn-specforproviderdestinationconfigonfailuredestinationrefpolicywithresolve)
        * [`obj spec.forProvider.destinationConfig.onFailure.destinationSelector`](#obj-specforproviderdestinationconfigonfailuredestinationselector)
          * [`fn withMatchControllerRef(matchControllerRef)`](#fn-specforproviderdestinationconfigonfailuredestinationselectorwithmatchcontrollerref)
          * [`fn withMatchLabels(matchLabels)`](#fn-specforproviderdestinationconfigonfailuredestinationselectorwithmatchlabels)
          * [`fn withMatchLabelsMixin(matchLabels)`](#fn-specforproviderdestinationconfigonfailuredestinationselectorwithmatchlabelsmixin)
          * [`obj spec.forProvider.destinationConfig.onFailure.destinationSelector.policy`](#obj-specforproviderdestinationconfigonfailuredestinationselectorpolicy)
            * [`fn withResolution(resolution)`](#fn-specforproviderdestinationconfigonfailuredestinationselectorpolicywithresolution)
            * [`fn withResolve(resolve)`](#fn-specforproviderdestinationconfigonfailuredestinationselectorpolicywithresolve)
      * [`obj spec.forProvider.destinationConfig.onSuccess`](#obj-specforproviderdestinationconfigonsuccess)
        * [`fn withDestination(destination)`](#fn-specforproviderdestinationconfigonsuccesswithdestination)
        * [`obj spec.forProvider.destinationConfig.onSuccess.destinationRef`](#obj-specforproviderdestinationconfigonsuccessdestinationref)
          * [`fn withName(name)`](#fn-specforproviderdestinationconfigonsuccessdestinationrefwithname)
          * [`obj spec.forProvider.destinationConfig.onSuccess.destinationRef.policy`](#obj-specforproviderdestinationconfigonsuccessdestinationrefpolicy)
            * [`fn withResolution(resolution)`](#fn-specforproviderdestinationconfigonsuccessdestinationrefpolicywithresolution)
            * [`fn withResolve(resolve)`](#fn-specforproviderdestinationconfigonsuccessdestinationrefpolicywithresolve)
        * [`obj spec.forProvider.destinationConfig.onSuccess.destinationSelector`](#obj-specforproviderdestinationconfigonsuccessdestinationselector)
          * [`fn withMatchControllerRef(matchControllerRef)`](#fn-specforproviderdestinationconfigonsuccessdestinationselectorwithmatchcontrollerref)
          * [`fn withMatchLabels(matchLabels)`](#fn-specforproviderdestinationconfigonsuccessdestinationselectorwithmatchlabels)
          * [`fn withMatchLabelsMixin(matchLabels)`](#fn-specforproviderdestinationconfigonsuccessdestinationselectorwithmatchlabelsmixin)
          * [`obj spec.forProvider.destinationConfig.onSuccess.destinationSelector.policy`](#obj-specforproviderdestinationconfigonsuccessdestinationselectorpolicy)
            * [`fn withResolution(resolution)`](#fn-specforproviderdestinationconfigonsuccessdestinationselectorpolicywithresolution)
            * [`fn withResolve(resolve)`](#fn-specforproviderdestinationconfigonsuccessdestinationselectorpolicywithresolve)
  * [`obj spec.initProvider`](#obj-specinitprovider)
    * [`fn withDestinationConfig(destinationConfig)`](#fn-specinitproviderwithdestinationconfig)
    * [`fn withDestinationConfigMixin(destinationConfig)`](#fn-specinitproviderwithdestinationconfigmixin)
    * [`fn withFunctionName(functionName)`](#fn-specinitproviderwithfunctionname)
    * [`fn withMaximumEventAgeInSeconds(maximumEventAgeInSeconds)`](#fn-specinitproviderwithmaximumeventageinseconds)
    * [`fn withMaximumRetryAttempts(maximumRetryAttempts)`](#fn-specinitproviderwithmaximumretryattempts)
    * [`fn withQualifier(qualifier)`](#fn-specinitproviderwithqualifier)
    * [`obj spec.initProvider.destinationConfig`](#obj-specinitproviderdestinationconfig)
      * [`fn withOnFailure(onFailure)`](#fn-specinitproviderdestinationconfigwithonfailure)
      * [`fn withOnFailureMixin(onFailure)`](#fn-specinitproviderdestinationconfigwithonfailuremixin)
      * [`fn withOnSuccess(onSuccess)`](#fn-specinitproviderdestinationconfigwithonsuccess)
      * [`fn withOnSuccessMixin(onSuccess)`](#fn-specinitproviderdestinationconfigwithonsuccessmixin)
      * [`obj spec.initProvider.destinationConfig.onFailure`](#obj-specinitproviderdestinationconfigonfailure)
        * [`fn withDestination(destination)`](#fn-specinitproviderdestinationconfigonfailurewithdestination)
        * [`obj spec.initProvider.destinationConfig.onFailure.destinationRef`](#obj-specinitproviderdestinationconfigonfailuredestinationref)
          * [`fn withName(name)`](#fn-specinitproviderdestinationconfigonfailuredestinationrefwithname)
          * [`obj spec.initProvider.destinationConfig.onFailure.destinationRef.policy`](#obj-specinitproviderdestinationconfigonfailuredestinationrefpolicy)
            * [`fn withResolution(resolution)`](#fn-specinitproviderdestinationconfigonfailuredestinationrefpolicywithresolution)
            * [`fn withResolve(resolve)`](#fn-specinitproviderdestinationconfigonfailuredestinationrefpolicywithresolve)
        * [`obj spec.initProvider.destinationConfig.onFailure.destinationSelector`](#obj-specinitproviderdestinationconfigonfailuredestinationselector)
          * [`fn withMatchControllerRef(matchControllerRef)`](#fn-specinitproviderdestinationconfigonfailuredestinationselectorwithmatchcontrollerref)
          * [`fn withMatchLabels(matchLabels)`](#fn-specinitproviderdestinationconfigonfailuredestinationselectorwithmatchlabels)
          * [`fn withMatchLabelsMixin(matchLabels)`](#fn-specinitproviderdestinationconfigonfailuredestinationselectorwithmatchlabelsmixin)
          * [`obj spec.initProvider.destinationConfig.onFailure.destinationSelector.policy`](#obj-specinitproviderdestinationconfigonfailuredestinationselectorpolicy)
            * [`fn withResolution(resolution)`](#fn-specinitproviderdestinationconfigonfailuredestinationselectorpolicywithresolution)
            * [`fn withResolve(resolve)`](#fn-specinitproviderdestinationconfigonfailuredestinationselectorpolicywithresolve)
      * [`obj spec.initProvider.destinationConfig.onSuccess`](#obj-specinitproviderdestinationconfigonsuccess)
        * [`fn withDestination(destination)`](#fn-specinitproviderdestinationconfigonsuccesswithdestination)
        * [`obj spec.initProvider.destinationConfig.onSuccess.destinationRef`](#obj-specinitproviderdestinationconfigonsuccessdestinationref)
          * [`fn withName(name)`](#fn-specinitproviderdestinationconfigonsuccessdestinationrefwithname)
          * [`obj spec.initProvider.destinationConfig.onSuccess.destinationRef.policy`](#obj-specinitproviderdestinationconfigonsuccessdestinationrefpolicy)
            * [`fn withResolution(resolution)`](#fn-specinitproviderdestinationconfigonsuccessdestinationrefpolicywithresolution)
            * [`fn withResolve(resolve)`](#fn-specinitproviderdestinationconfigonsuccessdestinationrefpolicywithresolve)
        * [`obj spec.initProvider.destinationConfig.onSuccess.destinationSelector`](#obj-specinitproviderdestinationconfigonsuccessdestinationselector)
          * [`fn withMatchControllerRef(matchControllerRef)`](#fn-specinitproviderdestinationconfigonsuccessdestinationselectorwithmatchcontrollerref)
          * [`fn withMatchLabels(matchLabels)`](#fn-specinitproviderdestinationconfigonsuccessdestinationselectorwithmatchlabels)
          * [`fn withMatchLabelsMixin(matchLabels)`](#fn-specinitproviderdestinationconfigonsuccessdestinationselectorwithmatchlabelsmixin)
          * [`obj spec.initProvider.destinationConfig.onSuccess.destinationSelector.policy`](#obj-specinitproviderdestinationconfigonsuccessdestinationselectorpolicy)
            * [`fn withResolution(resolution)`](#fn-specinitproviderdestinationconfigonsuccessdestinationselectorpolicywithresolution)
            * [`fn withResolve(resolve)`](#fn-specinitproviderdestinationconfigonsuccessdestinationselectorpolicywithresolve)
  * [`obj spec.providerConfigRef`](#obj-specproviderconfigref)
    * [`fn withName(name)`](#fn-specproviderconfigrefwithname)
    * [`obj spec.providerConfigRef.policy`](#obj-specproviderconfigrefpolicy)
      * [`fn withResolution(resolution)`](#fn-specproviderconfigrefpolicywithresolution)
      * [`fn withResolve(resolve)`](#fn-specproviderconfigrefpolicywithresolve)
  * [`obj spec.publishConnectionDetailsTo`](#obj-specpublishconnectiondetailsto)
    * [`fn withName(name)`](#fn-specpublishconnectiondetailstowithname)
    * [`obj spec.publishConnectionDetailsTo.configRef`](#obj-specpublishconnectiondetailstoconfigref)
      * [`fn withName(name)`](#fn-specpublishconnectiondetailstoconfigrefwithname)
      * [`obj spec.publishConnectionDetailsTo.configRef.policy`](#obj-specpublishconnectiondetailstoconfigrefpolicy)
        * [`fn withResolution(resolution)`](#fn-specpublishconnectiondetailstoconfigrefpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specpublishconnectiondetailstoconfigrefpolicywithresolve)
    * [`obj spec.publishConnectionDetailsTo.metadata`](#obj-specpublishconnectiondetailstometadata)
      * [`fn withAnnotations(annotations)`](#fn-specpublishconnectiondetailstometadatawithannotations)
      * [`fn withAnnotationsMixin(annotations)`](#fn-specpublishconnectiondetailstometadatawithannotationsmixin)
      * [`fn withLabels(labels)`](#fn-specpublishconnectiondetailstometadatawithlabels)
      * [`fn withLabelsMixin(labels)`](#fn-specpublishconnectiondetailstometadatawithlabelsmixin)
      * [`fn withType(type)`](#fn-specpublishconnectiondetailstometadatawithtype)
  * [`obj spec.writeConnectionSecretToRef`](#obj-specwriteconnectionsecrettoref)
    * [`fn withName(name)`](#fn-specwriteconnectionsecrettorefwithname)
    * [`fn withNamespace(namespace)`](#fn-specwriteconnectionsecrettorefwithnamespace)

## Fields

### fn new

```ts
new(name)
```

new returns an instance of FunctionEventInvokeConfig

## obj metadata

"ObjectMeta is metadata that all persisted resources must have, which includes all objects users must create."

### fn metadata.withAnnotations

```ts
withAnnotations(annotations)
```

"Annotations is an unstructured key value map stored with a resource that may be set by external tools to store and retrieve arbitrary metadata. They are not queryable and should be preserved when modifying objects. More info: http://kubernetes.io/docs/user-guide/annotations"

### fn metadata.withAnnotationsMixin

```ts
withAnnotationsMixin(annotations)
```

"Annotations is an unstructured key value map stored with a resource that may be set by external tools to store and retrieve arbitrary metadata. They are not queryable and should be preserved when modifying objects. More info: http://kubernetes.io/docs/user-guide/annotations"

**Note:** This function appends passed data to existing values

### fn metadata.withClusterName

```ts
withClusterName(clusterName)
```

"The name of the cluster which the object belongs to. This is used to distinguish resources with same name and namespace in different clusters. This field is not set anywhere right now and apiserver is going to ignore it if set in create or update request."

### fn metadata.withCreationTimestamp

```ts
withCreationTimestamp(creationTimestamp)
```

"Time is a wrapper around time.Time which supports correct marshaling to YAML and JSON.  Wrappers are provided for many of the factory methods that the time package offers."

### fn metadata.withDeletionGracePeriodSeconds

```ts
withDeletionGracePeriodSeconds(deletionGracePeriodSeconds)
```

"Number of seconds allowed for this object to gracefully terminate before it will be removed from the system. Only set when deletionTimestamp is also set. May only be shortened. Read-only."

### fn metadata.withDeletionTimestamp

```ts
withDeletionTimestamp(deletionTimestamp)
```

"Time is a wrapper around time.Time which supports correct marshaling to YAML and JSON.  Wrappers are provided for many of the factory methods that the time package offers."

### fn metadata.withFinalizers

```ts
withFinalizers(finalizers)
```

"Must be empty before the object is deleted from the registry. Each entry is an identifier for the responsible component that will remove the entry from the list. If the deletionTimestamp of the object is non-nil, entries in this list can only be removed. Finalizers may be processed and removed in any order.  Order is NOT enforced because it introduces significant risk of stuck finalizers. finalizers is a shared field, any actor with permission can reorder it. If the finalizer list is processed in order, then this can lead to a situation in which the component responsible for the first finalizer in the list is waiting for a signal (field value, external system, or other) produced by a component responsible for a finalizer later in the list, resulting in a deadlock. Without enforced ordering finalizers are free to order amongst themselves and are not vulnerable to ordering changes in the list."

### fn metadata.withFinalizersMixin

```ts
withFinalizersMixin(finalizers)
```

"Must be empty before the object is deleted from the registry. Each entry is an identifier for the responsible component that will remove the entry from the list. If the deletionTimestamp of the object is non-nil, entries in this list can only be removed. Finalizers may be processed and removed in any order.  Order is NOT enforced because it introduces significant risk of stuck finalizers. finalizers is a shared field, any actor with permission can reorder it. If the finalizer list is processed in order, then this can lead to a situation in which the component responsible for the first finalizer in the list is waiting for a signal (field value, external system, or other) produced by a component responsible for a finalizer later in the list, resulting in a deadlock. Without enforced ordering finalizers are free to order amongst themselves and are not vulnerable to ordering changes in the list."

**Note:** This function appends passed data to existing values

### fn metadata.withGenerateName

```ts
withGenerateName(generateName)
```

"GenerateName is an optional prefix, used by the server, to generate a unique name ONLY IF the Name field has not been provided. If this field is used, the name returned to the client will be different than the name passed. This value will also be combined with a unique suffix. The provided value has the same validation rules as the Name field, and may be truncated by the length of the suffix required to make the value unique on the server.\n\nIf this field is specified and the generated name exists, the server will NOT return a 409 - instead, it will either return 201 Created or 500 with Reason ServerTimeout indicating a unique name could not be found in the time allotted, and the client should retry (optionally after the time indicated in the Retry-After header).\n\nApplied only if Name is not specified. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#idempotency"

### fn metadata.withGeneration

```ts
withGeneration(generation)
```

"A sequence number representing a specific generation of the desired state. Populated by the system. Read-only."

### fn metadata.withLabels

```ts
withLabels(labels)
```

"Map of string keys and values that can be used to organize and categorize (scope and select) objects. May match selectors of replication controllers and services. More info: http://kubernetes.io/docs/user-guide/labels"

### fn metadata.withLabelsMixin

```ts
withLabelsMixin(labels)
```

"Map of string keys and values that can be used to organize and categorize (scope and select) objects. May match selectors of replication controllers and services. More info: http://kubernetes.io/docs/user-guide/labels"

**Note:** This function appends passed data to existing values

### fn metadata.withName

```ts
withName(name)
```

"Name must be unique within a namespace. Is required when creating resources, although some resources may allow a client to request the generation of an appropriate name automatically. Name is primarily intended for creation idempotence and configuration definition. Cannot be updated. More info: http://kubernetes.io/docs/user-guide/identifiers#names"

### fn metadata.withNamespace

```ts
withNamespace(namespace)
```

"Namespace defines the space within which each name must be unique. An empty namespace is equivalent to the \"default\" namespace, but \"default\" is the canonical representation. Not all objects are required to be scoped to a namespace - the value of this field for those objects will be empty.\n\nMust be a DNS_LABEL. Cannot be updated. More info: http://kubernetes.io/docs/user-guide/namespaces"

### fn metadata.withOwnerReferences

```ts
withOwnerReferences(ownerReferences)
```

"List of objects depended by this object. If ALL objects in the list have been deleted, this object will be garbage collected. If this object is managed by a controller, then an entry in this list will point to this controller, with the controller field set to true. There cannot be more than one managing controller."

### fn metadata.withOwnerReferencesMixin

```ts
withOwnerReferencesMixin(ownerReferences)
```

"List of objects depended by this object. If ALL objects in the list have been deleted, this object will be garbage collected. If this object is managed by a controller, then an entry in this list will point to this controller, with the controller field set to true. There cannot be more than one managing controller."

**Note:** This function appends passed data to existing values

### fn metadata.withResourceVersion

```ts
withResourceVersion(resourceVersion)
```

"An opaque value that represents the internal version of this object that can be used by clients to determine when objects have changed. May be used for optimistic concurrency, change detection, and the watch operation on a resource or set of resources. Clients must treat these values as opaque and passed unmodified back to the server. They may only be valid for a particular resource or set of resources.\n\nPopulated by the system. Read-only. Value must be treated as opaque by clients and . More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#concurrency-control-and-consistency"

### fn metadata.withSelfLink

```ts
withSelfLink(selfLink)
```

"SelfLink is a URL representing this object. Populated by the system. Read-only.\n\nDEPRECATED Kubernetes will stop propagating this field in 1.20 release and the field is planned to be removed in 1.21 release."

### fn metadata.withUid

```ts
withUid(uid)
```

"UID is the unique in time and space value for this object. It is typically generated by the server on successful creation of a resource and is not allowed to change on PUT operations.\n\nPopulated by the system. Read-only. More info: http://kubernetes.io/docs/user-guide/identifiers#uids"

## obj spec

"FunctionEventInvokeConfigSpec defines the desired state of FunctionEventInvokeConfig"

### fn spec.withDeletionPolicy

```ts
withDeletionPolicy(deletionPolicy)
```

"DeletionPolicy specifies what will happen to the underlying external\nwhen this managed resource is deleted - either \"Delete\" or \"Orphan\" the\nexternal resource.\nThis field is planned to be deprecated in favor of the ManagementPolicies\nfield in a future release. Currently, both could be set independently and\nnon-default values would be honored if the feature flag is enabled.\nSee the design doc for more information: https://github.com/crossplane/crossplane/blob/499895a25d1a1a0ba1604944ef98ac7a1a71f197/design/design-doc-observe-only-resources.md?plain=1#L223"

### fn spec.withManagementPolicies

```ts
withManagementPolicies(managementPolicies)
```

"THIS IS A BETA FIELD. It is on by default but can be opted out\nthrough a Crossplane feature flag.\nManagementPolicies specify the array of actions Crossplane is allowed to\ntake on the managed and external resources.\nThis field is planned to replace the DeletionPolicy field in a future\nrelease. Currently, both could be set independently and non-default\nvalues would be honored if the feature flag is enabled. If both are\ncustom, the DeletionPolicy field will be ignored.\nSee the design doc for more information: https://github.com/crossplane/crossplane/blob/499895a25d1a1a0ba1604944ef98ac7a1a71f197/design/design-doc-observe-only-resources.md?plain=1#L223\nand this one: https://github.com/crossplane/crossplane/blob/444267e84783136daa93568b364a5f01228cacbe/design/one-pager-ignore-changes.md"

### fn spec.withManagementPoliciesMixin

```ts
withManagementPoliciesMixin(managementPolicies)
```

"THIS IS A BETA FIELD. It is on by default but can be opted out\nthrough a Crossplane feature flag.\nManagementPolicies specify the array of actions Crossplane is allowed to\ntake on the managed and external resources.\nThis field is planned to replace the DeletionPolicy field in a future\nrelease. Currently, both could be set independently and non-default\nvalues would be honored if the feature flag is enabled. If both are\ncustom, the DeletionPolicy field will be ignored.\nSee the design doc for more information: https://github.com/crossplane/crossplane/blob/499895a25d1a1a0ba1604944ef98ac7a1a71f197/design/design-doc-observe-only-resources.md?plain=1#L223\nand this one: https://github.com/crossplane/crossplane/blob/444267e84783136daa93568b364a5f01228cacbe/design/one-pager-ignore-changes.md"

**Note:** This function appends passed data to existing values

## obj spec.forProvider



### fn spec.forProvider.withDestinationConfig

```ts
withDestinationConfig(destinationConfig)
```

"Configuration block with destination configuration. See below for details."

### fn spec.forProvider.withDestinationConfigMixin

```ts
withDestinationConfigMixin(destinationConfig)
```

"Configuration block with destination configuration. See below for details."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.withFunctionName

```ts
withFunctionName(functionName)
```

"Name or Amazon Resource Name (ARN) of the Lambda Function, omitting any version or alias qualifier."

### fn spec.forProvider.withMaximumEventAgeInSeconds

```ts
withMaximumEventAgeInSeconds(maximumEventAgeInSeconds)
```

"Maximum age of a request that Lambda sends to a function for processing in seconds. Valid values between 60 and 21600."

### fn spec.forProvider.withMaximumRetryAttempts

```ts
withMaximumRetryAttempts(maximumRetryAttempts)
```

"Maximum number of times to retry when the function returns an error. Valid values between 0 and 2. Defaults to 2."

### fn spec.forProvider.withQualifier

```ts
withQualifier(qualifier)
```

"Lambda Function published version, $LATEST, or Lambda Alias name."

### fn spec.forProvider.withRegion

```ts
withRegion(region)
```

"Region is the region you'd like your resource to be created in."

## obj spec.forProvider.destinationConfig

"Configuration block with destination configuration. See below for details."

### fn spec.forProvider.destinationConfig.withOnFailure

```ts
withOnFailure(onFailure)
```

"Configuration block with destination configuration for failed asynchronous invocations. See below for details."

### fn spec.forProvider.destinationConfig.withOnFailureMixin

```ts
withOnFailureMixin(onFailure)
```

"Configuration block with destination configuration for failed asynchronous invocations. See below for details."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.destinationConfig.withOnSuccess

```ts
withOnSuccess(onSuccess)
```

"Configuration block with destination configuration for successful asynchronous invocations. See below for details."

### fn spec.forProvider.destinationConfig.withOnSuccessMixin

```ts
withOnSuccessMixin(onSuccess)
```

"Configuration block with destination configuration for successful asynchronous invocations. See below for details."

**Note:** This function appends passed data to existing values

## obj spec.forProvider.destinationConfig.onFailure

"Configuration block with destination configuration for failed asynchronous invocations. See below for details."

### fn spec.forProvider.destinationConfig.onFailure.withDestination

```ts
withDestination(destination)
```

"Amazon Resource Name (ARN) of the destination resource. See the Lambda Developer Guide for acceptable resource types and associated IAM permissions."

## obj spec.forProvider.destinationConfig.onFailure.destinationRef

"Reference to a Queue in sqs to populate destination."

### fn spec.forProvider.destinationConfig.onFailure.destinationRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.forProvider.destinationConfig.onFailure.destinationRef.policy

"Policies for referencing."

### fn spec.forProvider.destinationConfig.onFailure.destinationRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.forProvider.destinationConfig.onFailure.destinationRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.forProvider.destinationConfig.onFailure.destinationSelector

"Selector for a Queue in sqs to populate destination."

### fn spec.forProvider.destinationConfig.onFailure.destinationSelector.withMatchControllerRef

```ts
withMatchControllerRef(matchControllerRef)
```

"MatchControllerRef ensures an object with the same controller reference\nas the selecting object is selected."

### fn spec.forProvider.destinationConfig.onFailure.destinationSelector.withMatchLabels

```ts
withMatchLabels(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

### fn spec.forProvider.destinationConfig.onFailure.destinationSelector.withMatchLabelsMixin

```ts
withMatchLabelsMixin(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

**Note:** This function appends passed data to existing values

## obj spec.forProvider.destinationConfig.onFailure.destinationSelector.policy

"Policies for selection."

### fn spec.forProvider.destinationConfig.onFailure.destinationSelector.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.forProvider.destinationConfig.onFailure.destinationSelector.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.forProvider.destinationConfig.onSuccess

"Configuration block with destination configuration for successful asynchronous invocations. See below for details."

### fn spec.forProvider.destinationConfig.onSuccess.withDestination

```ts
withDestination(destination)
```

"Amazon Resource Name (ARN) of the destination resource. See the Lambda Developer Guide for acceptable resource types and associated IAM permissions."

## obj spec.forProvider.destinationConfig.onSuccess.destinationRef

"Reference to a Topic in sns to populate destination."

### fn spec.forProvider.destinationConfig.onSuccess.destinationRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.forProvider.destinationConfig.onSuccess.destinationRef.policy

"Policies for referencing."

### fn spec.forProvider.destinationConfig.onSuccess.destinationRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.forProvider.destinationConfig.onSuccess.destinationRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.forProvider.destinationConfig.onSuccess.destinationSelector

"Selector for a Topic in sns to populate destination."

### fn spec.forProvider.destinationConfig.onSuccess.destinationSelector.withMatchControllerRef

```ts
withMatchControllerRef(matchControllerRef)
```

"MatchControllerRef ensures an object with the same controller reference\nas the selecting object is selected."

### fn spec.forProvider.destinationConfig.onSuccess.destinationSelector.withMatchLabels

```ts
withMatchLabels(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

### fn spec.forProvider.destinationConfig.onSuccess.destinationSelector.withMatchLabelsMixin

```ts
withMatchLabelsMixin(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

**Note:** This function appends passed data to existing values

## obj spec.forProvider.destinationConfig.onSuccess.destinationSelector.policy

"Policies for selection."

### fn spec.forProvider.destinationConfig.onSuccess.destinationSelector.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.forProvider.destinationConfig.onSuccess.destinationSelector.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.initProvider

"THIS IS A BETA FIELD. It will be honored\nunless the Management Policies feature flag is disabled.\nInitProvider holds the same fields as ForProvider, with the exception\nof Identifier and other resource reference fields. The fields that are\nin InitProvider are merged into ForProvider when the resource is created.\nThe same fields are also added to the terraform ignore_changes hook, to\navoid updating them after creation. This is useful for fields that are\nrequired on creation, but we do not desire to update them after creation,\nfor example because of an external controller is managing them, like an\nautoscaler."

### fn spec.initProvider.withDestinationConfig

```ts
withDestinationConfig(destinationConfig)
```

"Configuration block with destination configuration. See below for details."

### fn spec.initProvider.withDestinationConfigMixin

```ts
withDestinationConfigMixin(destinationConfig)
```

"Configuration block with destination configuration. See below for details."

**Note:** This function appends passed data to existing values

### fn spec.initProvider.withFunctionName

```ts
withFunctionName(functionName)
```

"Name or Amazon Resource Name (ARN) of the Lambda Function, omitting any version or alias qualifier."

### fn spec.initProvider.withMaximumEventAgeInSeconds

```ts
withMaximumEventAgeInSeconds(maximumEventAgeInSeconds)
```

"Maximum age of a request that Lambda sends to a function for processing in seconds. Valid values between 60 and 21600."

### fn spec.initProvider.withMaximumRetryAttempts

```ts
withMaximumRetryAttempts(maximumRetryAttempts)
```

"Maximum number of times to retry when the function returns an error. Valid values between 0 and 2. Defaults to 2."

### fn spec.initProvider.withQualifier

```ts
withQualifier(qualifier)
```

"Lambda Function published version, $LATEST, or Lambda Alias name."

## obj spec.initProvider.destinationConfig

"Configuration block with destination configuration. See below for details."

### fn spec.initProvider.destinationConfig.withOnFailure

```ts
withOnFailure(onFailure)
```

"Configuration block with destination configuration for failed asynchronous invocations. See below for details."

### fn spec.initProvider.destinationConfig.withOnFailureMixin

```ts
withOnFailureMixin(onFailure)
```

"Configuration block with destination configuration for failed asynchronous invocations. See below for details."

**Note:** This function appends passed data to existing values

### fn spec.initProvider.destinationConfig.withOnSuccess

```ts
withOnSuccess(onSuccess)
```

"Configuration block with destination configuration for successful asynchronous invocations. See below for details."

### fn spec.initProvider.destinationConfig.withOnSuccessMixin

```ts
withOnSuccessMixin(onSuccess)
```

"Configuration block with destination configuration for successful asynchronous invocations. See below for details."

**Note:** This function appends passed data to existing values

## obj spec.initProvider.destinationConfig.onFailure

"Configuration block with destination configuration for failed asynchronous invocations. See below for details."

### fn spec.initProvider.destinationConfig.onFailure.withDestination

```ts
withDestination(destination)
```

"Amazon Resource Name (ARN) of the destination resource. See the Lambda Developer Guide for acceptable resource types and associated IAM permissions."

## obj spec.initProvider.destinationConfig.onFailure.destinationRef

"Reference to a Queue in sqs to populate destination."

### fn spec.initProvider.destinationConfig.onFailure.destinationRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.initProvider.destinationConfig.onFailure.destinationRef.policy

"Policies for referencing."

### fn spec.initProvider.destinationConfig.onFailure.destinationRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.initProvider.destinationConfig.onFailure.destinationRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.initProvider.destinationConfig.onFailure.destinationSelector

"Selector for a Queue in sqs to populate destination."

### fn spec.initProvider.destinationConfig.onFailure.destinationSelector.withMatchControllerRef

```ts
withMatchControllerRef(matchControllerRef)
```

"MatchControllerRef ensures an object with the same controller reference\nas the selecting object is selected."

### fn spec.initProvider.destinationConfig.onFailure.destinationSelector.withMatchLabels

```ts
withMatchLabels(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

### fn spec.initProvider.destinationConfig.onFailure.destinationSelector.withMatchLabelsMixin

```ts
withMatchLabelsMixin(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

**Note:** This function appends passed data to existing values

## obj spec.initProvider.destinationConfig.onFailure.destinationSelector.policy

"Policies for selection."

### fn spec.initProvider.destinationConfig.onFailure.destinationSelector.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.initProvider.destinationConfig.onFailure.destinationSelector.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.initProvider.destinationConfig.onSuccess

"Configuration block with destination configuration for successful asynchronous invocations. See below for details."

### fn spec.initProvider.destinationConfig.onSuccess.withDestination

```ts
withDestination(destination)
```

"Amazon Resource Name (ARN) of the destination resource. See the Lambda Developer Guide for acceptable resource types and associated IAM permissions."

## obj spec.initProvider.destinationConfig.onSuccess.destinationRef

"Reference to a Topic in sns to populate destination."

### fn spec.initProvider.destinationConfig.onSuccess.destinationRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.initProvider.destinationConfig.onSuccess.destinationRef.policy

"Policies for referencing."

### fn spec.initProvider.destinationConfig.onSuccess.destinationRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.initProvider.destinationConfig.onSuccess.destinationRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.initProvider.destinationConfig.onSuccess.destinationSelector

"Selector for a Topic in sns to populate destination."

### fn spec.initProvider.destinationConfig.onSuccess.destinationSelector.withMatchControllerRef

```ts
withMatchControllerRef(matchControllerRef)
```

"MatchControllerRef ensures an object with the same controller reference\nas the selecting object is selected."

### fn spec.initProvider.destinationConfig.onSuccess.destinationSelector.withMatchLabels

```ts
withMatchLabels(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

### fn spec.initProvider.destinationConfig.onSuccess.destinationSelector.withMatchLabelsMixin

```ts
withMatchLabelsMixin(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

**Note:** This function appends passed data to existing values

## obj spec.initProvider.destinationConfig.onSuccess.destinationSelector.policy

"Policies for selection."

### fn spec.initProvider.destinationConfig.onSuccess.destinationSelector.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.initProvider.destinationConfig.onSuccess.destinationSelector.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.providerConfigRef

"ProviderConfigReference specifies how the provider that will be used to\ncreate, observe, update, and delete this managed resource should be\nconfigured."

### fn spec.providerConfigRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.providerConfigRef.policy

"Policies for referencing."

### fn spec.providerConfigRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.providerConfigRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.publishConnectionDetailsTo

"PublishConnectionDetailsTo specifies the connection secret config which\ncontains a name, metadata and a reference to secret store config to\nwhich any connection details for this managed resource should be written.\nConnection details frequently include the endpoint, username,\nand password required to connect to the managed resource."

### fn spec.publishConnectionDetailsTo.withName

```ts
withName(name)
```

"Name is the name of the connection secret."

## obj spec.publishConnectionDetailsTo.configRef

"SecretStoreConfigRef specifies which secret store config should be used\nfor this ConnectionSecret."

### fn spec.publishConnectionDetailsTo.configRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.publishConnectionDetailsTo.configRef.policy

"Policies for referencing."

### fn spec.publishConnectionDetailsTo.configRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.publishConnectionDetailsTo.configRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.publishConnectionDetailsTo.metadata

"Metadata is the metadata for connection secret."

### fn spec.publishConnectionDetailsTo.metadata.withAnnotations

```ts
withAnnotations(annotations)
```

"Annotations are the annotations to be added to connection secret.\n- For Kubernetes secrets, this will be used as \"metadata.annotations\".\n- It is up to Secret Store implementation for others store types."

### fn spec.publishConnectionDetailsTo.metadata.withAnnotationsMixin

```ts
withAnnotationsMixin(annotations)
```

"Annotations are the annotations to be added to connection secret.\n- For Kubernetes secrets, this will be used as \"metadata.annotations\".\n- It is up to Secret Store implementation for others store types."

**Note:** This function appends passed data to existing values

### fn spec.publishConnectionDetailsTo.metadata.withLabels

```ts
withLabels(labels)
```

"Labels are the labels/tags to be added to connection secret.\n- For Kubernetes secrets, this will be used as \"metadata.labels\".\n- It is up to Secret Store implementation for others store types."

### fn spec.publishConnectionDetailsTo.metadata.withLabelsMixin

```ts
withLabelsMixin(labels)
```

"Labels are the labels/tags to be added to connection secret.\n- For Kubernetes secrets, this will be used as \"metadata.labels\".\n- It is up to Secret Store implementation for others store types."

**Note:** This function appends passed data to existing values

### fn spec.publishConnectionDetailsTo.metadata.withType

```ts
withType(type)
```

"Type is the SecretType for the connection secret.\n- Only valid for Kubernetes Secret Stores."

## obj spec.writeConnectionSecretToRef

"WriteConnectionSecretToReference specifies the namespace and name of a\nSecret to which any connection details for this managed resource should\nbe written. Connection details frequently include the endpoint, username,\nand password required to connect to the managed resource.\nThis field is planned to be replaced in a future release in favor of\nPublishConnectionDetailsTo. Currently, both could be set independently\nand connection details would be published to both without affecting\neach other."

### fn spec.writeConnectionSecretToRef.withName

```ts
withName(name)
```

"Name of the secret."

### fn spec.writeConnectionSecretToRef.withNamespace

```ts
withNamespace(namespace)
```

"Namespace of the secret."